infrastructure/dev-v2/business/westus3/platform-access.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "demo-services"
