infrastructure/dev-v2/business/westus3/business-api-v2-ingress.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: "istio-ingress-gateway-internal-v2-westus3"
  namespace: "aks-istio-ingress"
spec:
  selector:
    istio: aks-istio-ingressgateway-internal
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "employees-v2.internal.cloudcompany.pe"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: "business-api-v2-ingress-westus3"
  namespace: "demo-services"
spec:
  hosts:
    - "employees-v2.internal.cloudcompany.pe"
  gateways:
    - "aks-istio-ingress/istio-ingress-gateway-internal-v2-westus3"
  http:
    - match:
        - uri:
            prefix: "/api/employees"
      timeout: "10s"
      retries:
        attempts: 0
      rewrite:
        uri: "/api/employees"
      route:
        - destination:
            host: "resiliency-app-redis-v2-aks.demo-services.svc.cluster.local"
            port:
              number: 80
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: "resiliency-app-redis-v2-strict-mtls"
  namespace: "demo-services"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/part-of: "resiliency-app-redis-v2"
  mtls:
    mode: STRICT
